--- a/docroot/themes/custom/site/templates/page/page--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--vih-long-cource.html.twig
@@ -12,52 +12,56 @@
   <!-- End - drawer -->
 
   <!-- Begin - header -->
-    {% include '@site/custom/header.html.twig' %}
+  {% include '@site/custom/header.html.twig' %}
   <!-- End - header -->
 
-  <!-- Begin - content -->
-  <div class="layout__content">
-    <div class="news-banner" style="background-image: url('{{ file_url(node.field_vih_course_image.entity.fileuri) }}');">
-      {% if node.title.value %}
-        <h1 class="news-banner-title">{{ node.title.value }}</h1>
-      {% elseif page['#title'] %}
-        <h1>{{ page['#title'] }}</h1>
-      {% endif %} </div>
+  <!-- Begin - document -->
+  <main class="layout__document" role="document">
 
-    {# Header #}
-    {% if page.header %}
-      {% block header %}
-        <div role="heading" class="page-heading">
-          <div class="angled-background-color angled-background-color-white">
-            <div class="angled-background-inner" style="position: unset !important;">
-              <div class="container">
+    <!-- Begin - content -->
+    <div class="layout__content">
+      <div class="news-banner"
+           style="background-image: url('{{ file_url(node.field_vih_course_image.entity.fileuri) }}');">
+        {% if node.title.value %}
+          <h1 class="news-banner-title">{{ node.title.value }}</h1>
+        {% elseif page['#title'] %}
+          <h1>{{ page['#title'] }}</h1>
+        {% endif %} </div>
 
+      {# Header #}
+      {% if page.header %}
+        {% block header %}
+          <div role="heading" class="page-heading">
+            <div class="angled-background-color angled-background-color-white">
+              <div class="angled-background-inner" style="position: unset !important;">
+                <div class="container">
+
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      {% endblock %}
-    {% endif %}
+        {% endblock %}
+      {% endif %}
 
-    <div class="container news-container">
-      {{ page.header }}
-      {{ page.breadcrumb }}
-      <hr class="hidden-xs">
-      {% if node.title.value %}
-        <h3 class="node-page-title">{{ node.field_vih_course_heading.value }}</h3>
-        <h5 class="course-subheading">- {{ node.field_vih_course_subheading.value }}</h5>
-      {% elseif page['#title'] %}
-        <h3>{{ node.field_vih_course_heading.value }}</h3>
-        <h5>{{ node.field_vih_course_subheading.value }}</h5>
+      <div class="container news-container">
+        {{ page.header }}
+        {{ page.breadcrumb }}
+        <hr class="hidden-xs">
+        {% if node.title.value %}
+          <h3 class="node-page-title">{{ node.field_vih_course_heading.value }}</h3>
+          <h5 class="course-subheading">- {{ node.field_vih_course_subheading.value }}</h5>
+        {% elseif page['#title'] %}
+          <h3>{{ node.field_vih_course_heading.value }}</h3>
+          <h5>{{ node.field_vih_course_subheading.value }}</h5>
+        {% endif %}
+      </div>
+      {% if node and node.getType == 'page' %}
+        {{ page.content }}
+      {% else %}
+        {{ page.content }}
       {% endif %}
     </div>
-    {% if node and node.getType == 'page' %}
-      {{ page.content }}
-    {% else %}
-      {{ page.content }}
-    {% endif %}
-  </div>
-  <!-- End - content -->
+    <!-- End - content -->
 
     <!-- Begin - footer -->
     <footer class="layout__footer">
@@ -108,7 +112,8 @@
               <div class="row">
                 <div class="col-xs-12 col-sm-6">
                   <div class="layout__footer-bottom-copyright">
-                    <p>{% trans %} © {{ theme_settings['copyright_interval'] }}, Vejle Idrætshøjskole. All rights reserved.{% endtrans %}</p>
+                    <p>{% trans %} © {{ theme_settings['copyright_interval'] }}, Vejle Idrætshøjskole. All rights
+                      reserved.{% endtrans %}</p>
                   </div>
                 </div>
                 <div class="col-xs-12 col-sm-6">
